# rust-react-demo

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
backend/: Cargo.toml  Dockerfile
backend/src/: auth.rs  db.rs  handlers.rs  main.rs  models.rs
frontend/: Dockerfile  package-lock.json
frontend/src/: App.tsx  DeviceManager.tsx  Login.tsx  Register.tsx
