[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.6", features = ["headers"] } 
headers = "0.3"                                    
tower-http = { version = "0.4", features = ["cors"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
argon2 = "0.5"
jsonwebtoken = "8"
password-hash = "0.5"
tokio = { version = "1", features = ["full"] }